--- a/02-presentation_tidyverse.Rmd
+++ b/02-presentation_tidyverse.Rmd
@@ -6,7 +6,7 @@ Le `tidyverse` est un ensemble de packages proposant une syntaxe cohérente pour
 
 - Utiliser l'opérateur pipe ;
 
-- S'intègrer dans l'approche de programmation fonctionnelle de R ;
+- S'intégrer dans l'approche de programmation fonctionnelle de R ;
 
 - Designé pour les être humains : favoriser la facilité d'usage à la performance machine.
 
@@ -59,5 +59,5 @@ D'autres packages permettent également de réaliser ce type de manipulations. L
 Un autre package propose toutefois une vision intégrée de la sorte : [`{data.table}`](https://cran.r-project.org/web/packages/data.table/vignettes/datatable-intro.html).
 Plusieurs différences sont à noter : 
 
-- `{data.table}` est plus rapide sur d'importants volumes de données, le code est très succinct.  
+- `{data.table}` est plus rapide sur d'importants volumes de données, le code est très concis.  
 - `{dplyr}` est plus simple à apprendre, le code est plus lisible, il peut s'appliquer à des formats de données multiples, il s'intègre dans un framework global qui va de la lecture des données (`{readr}`, `{readxl}`, `{haven}`...) à leur valorisation (`{ggplot2}`).  
