--- a/06-manipuler_plusieurs_tables.Rmd
+++ b/06-manipuler_plusieurs_tables.Rmd
@@ -12,14 +12,7 @@ On va pouvoir regrouper ces fonctions en plusieurs catégories de manipulations 
 
 ## Exercice 5
 
-- reconstituer le dataframe `exercice` à partir des données contenues dans les tables `analyse`, `prelevement` et `station` (jointures),  
-
 ![](images/MCD_pesticides.png)
 
-- calculer le nombre d’analyses réalisées sur des molécules (code_parametre) présentes dans le référentiel `parametre`,   
-
-- produire une liste des `code_parametre` associés à des analyses mais absents du référentiel,     
-
-- produire une table des analyses "orphelines", c'est-à-dire qui ne correspondent pas à un prélèvement.  
-
-
+```{r mod2_exo5, child=savoirfR::charge_exo("m2", "exo5.rmd"), echo=FALSE}
+```
