--- a/07-structurer_ses_tables.Rmd
+++ b/07-structurer_ses_tables.Rmd
@@ -7,9 +7,9 @@ Pour bien manipuler des données, leur structuration est fondamentale. Il faut b
 - une ligne de notre table,  
 - une colonne de notre table.
 
-Sur une table non aggrégée (un répertoire, une table d'enquête...), la structuration naturelle est une ligne par observation (un individu, une entreprise...), une colonne par variable (âge, taille...) sur cette observation. 
+Sur une table non agrégée (un répertoire, une table d'enquête...), la structuration naturelle est une ligne par observation (un individu, une entreprise...), une colonne par variable (âge, taille...) sur cette observation. 
 
-Mais dès qu'on aggrège une telle table pour construire des tables structurées par dimensions d'analyse et indicateurs, se pose toujours la question de savoir ce qu'on va considérer comme des dimensions et comme des indicateurs. Le standard **tidy data** définit 3 principes pour des données **propres** :  
+Mais dès qu'on agrège une telle table pour construire des tables structurées par dimensions d'analyse et indicateurs, se pose toujours la question de savoir ce qu'on va considérer comme des dimensions et comme des indicateurs. Le standard **tidy data** définit 3 principes pour des données **propres** :  
 
 - chaque variable est une colonne,  
 - chaque observation est une ligne,  
