--- a/05-manipuler_des_donnees.Rmd
+++ b/05-manipuler_des_donnees.Rmd
@@ -7,11 +7,11 @@ Le but de `{dplyr}` est d'identifier et de rassembler dans un seul package les o
 - Sélectionner un ensemble de variables : `select()`  
 - Sélectionner un ensemble de lignes : `filter()`  
 - Ajouter/modifier/renommer des variables : `mutate()` ou `rename()`  
-- Produire des statistiques aggrégées sur les dimensions d'une table : `summarise()`  
+- Produire des statistiques agrégées sur les dimensions d'une table : `summarise()`  
 - Trier une table : `arrange()`  
 - Manipuler plusieurs tables : `left_join()`, `right_join()`, `full_join()`, `inner_join()`...  
 
-D'appliquer cela sur des données, quel que soit leur format : data frames, data.table, base de données sql, big data...
+D'appliquer cela sur des données, quel que soit leur format : dataframes, data.table, couche spatiale, base de données sql, big data...
 
 D'appliquer cela en articulation avec `group_by()` qui change la façon d'interpréter chaque fonction : d'une interprétation *globale* sur l'ensemble d'une table, on passe alors à une approche *groupe par groupe* : chaque groupe étant défini par un ensemble des modalités des variables définies dans l'instruction `group_by()`.
 
@@ -24,17 +24,20 @@ On va travailler sur ce module principalement à partir des données sitadel en 
 
 ## Chargement des données
 
-```{r manip_1, echo = FALSE, warning = FALSE, error = FALSE, eval = FALSE}
-drv <- dbDriver("PostgreSQL")
-con <- dbConnect(drv, dbname = "production", host = "xx.xx.xxx.xxx", port = 5432,
-                 user = "dreal", password = "xxxxxxxx")
-postgresqlpqExec(con, "SET client_encoding = 'windows-1252'")
 
-analyse <- dbGetQuery(con, "SELECT * FROM pesticides.analyse")
-parametre <- dbGetQuery(con, "SELECT * FROM pesticides.parametre")
-prelevement <- dbGetQuery(con, "SELECT * FROM pesticides.prelevement")
-station <- st_read_db(con, query = "SELECT * FROM pesticides.station")
+```{r manip_1, echo = FALSE, warning = FALSE, error = FALSE, eval = FALSE}
+Dans un environnement SSPCloud, les données peuvent être chargée ainsi :
+Sys.setenv("server" = "postgresql-304103.user-juliette",
+           "user_does" = "stagiaire",
+           "pwd_does" = "xxx")
+
+library(datalibaba)
+analyse <- importer_data(schema = "pesticides", table = "analyse", db = "formR_M2")
+parametre <- importer_data(schema = "pesticides", table = "parametre", db = "formR_M2")
+prelevement <- importer_data(schema = "pesticides", table = "prelevement", db = "formR_M2")
+station <- importer_data(schema = "pesticides", table = "station", db = "formR_M2")
 ```
+
 
 ```{r manip_2, include = TRUE}
 load(file = "extdata/FormationPreparationDesDonnees.RData")
@@ -104,7 +107,7 @@ ars <- filter(prelevement, code_reseau == "ARS")
 
 L'exemple ci-dessus n'exerce un filtre que sur une condition unique.
 
-Pour des conditions cumulatives (toutes les conditions doivent être remplies), le "&" ou la ","
+Pour des conditions cumulatives (toutes les conditions doivent être remplies), le `"&"` ou la `","`
 
 ```{r manip_9}
 ars <- filter(prelevement, code_reseau == "ARS", code_intervenant == "44")
@@ -138,7 +141,7 @@ ni_ars_ni_fredon <- filter(prelevement, !(code_reseau %in% c("ARS", "FREDON")))
 
 ### Modifier/ajouter une variable : `mutate()`
 
-`mutate()` est le verbe qui permet la transformation d’une variable existante ou la création d’une nouvelle variable dans le jeu de données. 
+`mutate()` est le verbe qui permet la transformation d'une variable existante ou la création d'une nouvelle variable dans le jeu de données. 
 
 <center>![](images/mutate.png)</center>
 
@@ -446,7 +449,7 @@ iconv(proust2, to = "ASCII//TRANSLIT")
 
 ```
 
-Avec un humour particulier, un petit aide-mémoire illustré, assez visuel, est proposé par Lise Vaudor [ici](http://perso.ens-lyon.fr/lise.vaudor/manipuler-des-strings-avec-r/). 
+Avec humour, un petit aide-mémoire illustré, très visuel, est proposé par Lise Vaudor [ici](http://perso.ens-lyon.fr/lise.vaudor/manipuler-des-strings-avec-r/). 
 
 ### Manipuler des variables factorielles ( = qualitatives ou catégorielles)
 
@@ -508,31 +511,31 @@ ggplot(data, aes(x = fct_reorder(cat, -num), num)) +
 
 
 
-## Aggréger des données : `summarise()`
+## Agréger des données : `summarise()`
 
 <center>![](images/summarise.png)</center>
 
-La fonction `summarise()` permet d'aggréger des données, en appliquant une fonction sur les variables pour construire une statistique sur les observations de la table.
+La fonction `summarise()` permet d'agréger des données, en appliquant une fonction sur les variables pour construire une statistique sur les observations de la table.
 `summarise()` est une fonction dite de “résumé”. À l’inverse de `mutate()`, quand une fonction summarise est appelée, elle retourne une seule information. La moyenne, la variance, l’effectif… sont des informations qui condensent la variable étudiée en une seule information.
 <left>![](images/summarise.jpg)</left><left>![](images/mutate.jpg)</left>
 
-La syntaxe de summarise est classique. Le résultat est un dataframe.
+La syntaxe de `summarise` est classique. Le résultat est un dataframe.
 
 ```{r, echo = TRUE, results='hide'}
 summarise(exercice, 
-          mesure_moyenne = mean(resultat_analyse, na.rm = T))
+          mesure_moyenne = mean(resultat_analyse, na.rm = TRUE))
 ```
 
 On peut calculer plusieurs statistiques sur une agrégation
 
 ```{r, echo = TRUE, results='hide'}
 summarise(exercice, 
-          mesure_moyenne = mean(resultat_analyse, na.rm = T),
-          mesure_total = sum(resultat_analyse, na.rm = T)
+          mesure_moyenne = mean(resultat_analyse, na.rm = TRUE),
+          mesure_total = sum(resultat_analyse, na.rm = TRUE)
           )
 ```
 
-### Quelques fonctions d'aggrégations utiles
+### Quelques fonctions d'agrégations utiles
 
 - compter : `n()`
 - sommer : `sum()`
@@ -543,49 +546,79 @@ summarise(exercice,
 - minimum : `min()`, maximum : `max()`
 - position : `first()`, `nth(., position)`, `last()`
 
+La plupart de ces fonctions d'agrégation sont paramétrables pour indiquer comment traiter les valeurs manquantes (NA) grâce à l'argument `na.rm`. 
+Si on ne souhaite pas tenir compte des valeurs manquantes pour effectuer notre synthèse, il faut indiquer `na.rm = TRUE` pour évacuer les valeurs manquantes du calcul, sinon, le résultat apparaîtra comme lui même manquant, car il manque des observations pour pouvoir calculer correctement notre résultat.  
+C'est la connaissance de votre source de données et du travail en court qui déterminera comment vous souhaitez que les valeurs manquantes soit traitées. 
 
-## Aggréger des données par dimension : `group_by()`
+
+## Agréger des données par dimension : `group_by()`
 
 <center>![](images/groupby.png)</center>
 
-Summarise est utile, mais la plupart du temps, nous avons besoin non pas d'aggréger des données d'une table entière, mais de construire des aggrégations sur des sous-ensembles : par année, département...
+La fonction `summarise()` est utile, mais la plupart du temps, nous avons besoin non pas d'agréger des données d'une table entière, mais de construire des agrégations sur des sous-ensembles : par année, département...
 La fonction `group_by()` va permettre *d'éclater* notre table en fonction de dimensions de celle-ci.
 
 Ainsi, si on veut construire des statistiques agrégées non sur l'ensemble de la table, mais pour chacune des modalités d'une ou de plusieurs variables de la table. Il faut deux étapes :
 
-- utiliser prélablement la fonction `group_by()` pour définir les variables sur lesquelles on souhaite aggréger les données,
+- utiliser préalablement la fonction `group_by()` pour définir la ou les variables sur lesquelles on souhaite agréger les données,
 
-- utiliser `summarise()` ou sur la table en sortie de l'étape précédente.
+- utiliser `summarise()` sur la table en sortie de l'étape précédente.
 
-Découper un jeu de données pour réaliser des opérations sur chacun des sous-ensembles afin de les restituer ensuite de façon organisée est appelée stratégie du split – apply – combine schématiquement, c’est cette opération qui est réalisée par dplyr dès qu'un `group_by()` est introduit sur une table.
+Découper un jeu de données pour réaliser des opérations sur chacun des sous-ensembles afin de les restituer ensuite de façon organisée est appelée stratégie du split – apply – combine schématiquement, c’est cette opération qui est réalisée par dplyr dès qu'un `group_by()` est introduit sur une table. 
 
 <center>![](images/split_apply_combine-1024x570.png)</center>
 
-Exemple pour calculer les statistiques précédentes par mois : 
+Exemple pour calculer les statistiques précédentes par année : 
 
 ```{r, echo = TRUE}
 exercice <- mutate(exercice, annee = year(date_prelevement))
 
 paran <- group_by(exercice, annee)
 
-summarise (paran, mesure_moyenne = mean(resultat_analyse, na.rm = T),
-                  mesure_total = sum(resultat_analyse, na.rm = T))
+summarise(paran, 
+          mesure_moyenne = mean(resultat_analyse, na.rm = TRUE), 
+          mesure_total = sum(resultat_analyse, na.rm = TRUE))
 ```
 
-Pour reprendre des traitements "table entière", il faut mettre fin au `group_by()` par un `ungroup()`
+Pour reprendre des traitements "table entière", il faut mettre fin au `group_by()` par un `ungroup()`. 
+
+La fonction `summarise()` accepte désormais un argument `.groups` qui permet d'indiquer directement comment nous souhaitons voir ré-assemblé ou non notre jeu de données. 
+
+```{r, echo = TRUE}
+
+paran <- group_by(exercice, annee, code_reseau)
+
+resultat <- summarise(paran, mesure_moyenne = mean(resultat_analyse, na.rm = TRUE), 
+                      mesure_total = sum(resultat_analyse, na.rm = TRUE))
+```
+
+Si on omet de lui déclarer comment traiter les groupes en sortie, `summarise()` nous informe des éventuels groupes résiduels, ici `resultat` est toujours groupé par `annee`. 
+
+Pour remédier à ce message ou changer le comportement de `summarise()`, `.groups` peut prendre plusieurs valeurs :  
+
+- `"drop_last"` : va supprimer le dernier niveau de groupement de notre jeu de données. Dans notre exemple le groupe selon `code_reseau` va disparaître et celui lié à `annee` va rester. C'est le comportement par défaut.
+- `"drop"` : supprime tous les niveaux de groupement
+- `"keep"` : conserve tous les niveaux de groupement.
+- `"rowwise"` : chaque ligne devient son propre groupe.
+
+```{r, echo = TRUE}
+
+resultat <- summarise(paran, mesure_moyenne = mean(resultat_analyse, na.rm = TRUE), mesure_total = sum(resultat_analyse, na.rm = TRUE),
+                      .groups = "drop")
+```
 
 ## Le pipe
 ![](images/pipe.png)
 
-Le pipe est la fonction qui va vous permettre d'écrire votre code de façon plus lisible pour vous et les utilisateurs.
-Comment ?  
+Le pipe est la fonction qui va vous permettre d'écrire votre code de façon plus lisible pour vous et les utilisateurs. 
+Comment ?   
 En se rapprochant de l'usage usuel en grammaire. 
 
-`verbe(sujet,complement)` devient `sujet %>% verbe(complement)`
+`verbe(sujet, complement)` devient `sujet %>% verbe(complement)`
 
 Quand on enchaîne plusieurs verbes, l'avantage devient encore plus évident : 
 
-`verbe2(verbe1(sujet,complement1),complement2)` devient `sujet %>% verbe1(complement1) %>% verbe2(complement2)`
+`verbe2(verbe1(sujet, complement1), complement2)` devient `sujet %>% verbe1(complement1) %>% verbe2(complement2)`
 
 En reprenant l'exemple précédent, sans passer par les étapes intermédiaires, le code aurait cette tête :
 
@@ -594,12 +627,12 @@ summarise (
   group_by (
     mutate (
       exercice,
-      annee = year (date_prelevement)
+      annee = year(date_prelevement)
             ),
       annee
             ), 
-          mesure_moyenne = mean (resultat_analyse, na.rm = T),
-          mesure_total = sum (resultat_analyse, na.rm = T)
+          mesure_moyenne = mean(resultat_analyse, na.rm = TRUE),
+          mesure_total = sum(resultat_analyse, na.rm = TRUE)
           )
 ```
 
@@ -609,14 +642,14 @@ Avec l'utilisation du pipe (raccourci clavier `CTrl + Maj + M`), il devient :
 exercice %>%
   mutate(annee = year(date_prelevement)) %>%
   group_by(annee) %>%
-  summarise(mesure_moyenne = mean (resultat_analyse, na.rm = T),
-            mesure_total = sum (resultat_analyse, na.rm = T))
+  summarise(mesure_moyenne = mean(resultat_analyse, na.rm = TRUE),
+            mesure_total = sum(resultat_analyse, na.rm = TRUE))
 
 ```
 
 ## La magie des opérations groupées
 
-L'opération `group_by()` que nous venons de voir est très utile pour les aggrégations, mais elle peut aussi servir pour créer des variables ou filtrer une table, puisque `group_by()` permet de traiter notre table en entrée comme *autant de tables séparées* par les modalités des variables de regroupement.
+L'opération `group_by()` que nous venons de voir est très utile pour les agrégations, mais elle peut aussi servir pour créer des variables ou filtrer une table, puisque `group_by()` permet de traiter notre table en entrée comme *autant de tables séparées* par les modalités des variables de regroupement.
 
 
 ### Exercice 3
@@ -639,11 +672,12 @@ Nous venons de voir les principaux verbes de manipulation d'une table de dplyr. 
 
 ### Les select helpers
 
-Repéter des opérations de nettoyage ou de typage sur les différentes variables d'un jeu de données peut s'avérer fastidieux lorsque l'on a à écrire les opérations variable par variable.
+Répéter des opérations de nettoyage ou de typage sur les différentes variables d'un jeu de données peut s'avérer fastidieux lorsque l'on a à écrire les opérations variable par variable.
 
 La fonction select() propose cinq manières différentes de désigner les variables à sélectionner.
 Nous avons vu la première et la plus intuitive, qui est de **nommer** les variables une à une. 
-On peut également utiliser les `:` qui permettent de sélectionner une liste de variables consécutives. On peut également désigner les variables à sélectionner en fonction de leur **position** :
+On peut également utiliser les `:` qui permettent de sélectionner une liste de variables consécutives. 
+On peut également désigner les variables à sélectionner en fonction de leur **position** :
 
 ```{r select1}
 select(exercice, code_analyse, code_laboratoire, code_prelevement, code_parametre,
@@ -660,7 +694,7 @@ select(exercice, -c(1:7)) %>% names()
 
 Sélectionner les variables en fonction de leur position peut sembler séduisant, mais attention aux problèmes de reproductibilité que cela peut poser si le jeu de données en entrée bouge un peu entre deux millésimes.
 
-On peut également sélectionner des variables selon des **conditions sur leur nom**. Par exemple, on peut selectionner les variables dont le nom commence par "date", ou se termine par "station", ou contient "prel" ou en fonction d'une expression régulière comme "m.n" (le nom contient un "m" suivi d'un caractère suivi d'un "n".
+On peut également sélectionner des variables selon des **conditions sur leur nom**. Par exemple, on peut sélectionner les variables dont le nom commence par "date", ou se termine par "station", ou contient "prel" ou en fonction d'une expression régulière comme "m.n" (le nom contient un "m" suivi d'un caractère suivi d'un "n".
 
 ```{r select2}
 select(exercice, starts_with("date")) %>% names()
@@ -675,7 +709,7 @@ On peut également sélectionner des variables selon des **conditions sur leur t
 select(exercice, where(is.numeric)) %>% names()
 select(exercice, where(is.character)) %>% names()
 ```
-On peut enfin sélectionner des variables en **combinant** les moyens détaillés ci-avant et en recourant aux opérateurs boléens : `!` (negation), `&` (et), `|` (ou).
+On peut enfin sélectionner des variables en **combinant** les moyens détaillés ci-avant et en recourant aux opérateurs booléens : `!` (négation), `&` (et), `|` (ou).
 
 ```{r select4}
 select(exercice, 1:7 & starts_with("code")) %>% names()
@@ -689,7 +723,7 @@ select(exercice, starts_with("date") & !where(is.Date)) %>% names()
 Lorsqu'on souhaite renommer les variable une à une, la fonction `rename()` fonctionne de la même manière que `select()` :     
 ` mon_df_renomme <- rename(mon_dataframe, nouveau_nom1 = ancien_nom1, nouveau_nom2 = ancien_nom2)`
 
-Si l'on souhaite recourir aux select helpers, il faut utiliser `rename_with()`, avec la synthaxe `rename_with(.data= mon_df, .fn= ma_fonction_de_renommage, .cols= les_variables_a_renommer)`. Exemple avec la fonction toupper() qui passe les chaînes de caractères en majuscules.
+Si l'on souhaite recourir aux select helpers, il faut utiliser `rename_with()`, avec la syntaxe `rename_with(.data= mon_df, .fn= ma_fonction_de_renommage, .cols= les_variables_a_renommer)`. Exemple avec la fonction `toupper()` qui passe les chaînes de caractères en majuscules.
 
 ```{r rename_with1}
 rename_with(station, toupper, starts_with("code")) %>% names()
