--- a/index.Rmd
+++ b/index.Rmd
@@ -74,7 +74,7 @@ datasets_m2 <- read.csv2(system.file("extdata", "list_data_module.csv", package 
   pull(file)
 dir.create("extdata/")
 file.copy(from = system.file("extdata", datasets_m2, package = "savoirfR"), 
-          to = paste0("extdata/", datasets_m2), overwrite = TRUE)
+          to = paste0("extdata/", datasets_m2), overwrite = TRUE, recursive = TRUE )
 
 ```
 
