--- a/06-manipuler_plusieurs_tables.Rmd
+++ b/06-manipuler_plusieurs_tables.Rmd
@@ -22,30 +22,30 @@ Voici quelques exemples détaillant les principaux cas rencontrés :
 
 ```{r eval=FALSE, include=TRUE}
 # jointure avec des noms de colonnes différentes pour la clé
-# `c` est une colonne dans a et `d` est une colonne de b
-left_join(a, b, by = c("c" = "d"))
+# `colonne_c` est une colonne de data_a et `colonne_d` est une colonne de data_b
+left_join(data_a, data_b, by = c("colonne_c" = "colonne_d"))
 
 # jointure sur deux colonnes
-# `e` et `f` sont des colonnes de a et de b
-left_join(a, b, by = c("e", "f"))
+# `colonne_e` et `colonne_f` sont des colonnes de data_a et de data_b
+left_join(data_a, data_b, by = c("colonne_e", "colonne_f"))
 
 # jointure sur deux colonnes avec noms différents
-# `g`et `i` sont des colonnes de a, `h` et `j` sont des colonnes de b
-left_join(a, b, by = c("g" = "h", "i" = "j"))
+# `colonne_g`et `colonne_i` sont des colonnes de data_a, `colonne_h` et `colonne_j` sont des colonnes de data_b
+left_join(data_a, data_b, by = c("colonne_g" = "colonne_h", "colonne_i" = "colonne_j"))
 
 ```
 
 ## Paramétrage du suffixe pour des colonnes présentes dans les deux tables
 
-Dans le cas où des colonnes (hors jointure) sont présentes dans `a` et `b`, ces colonnes seront suffixées par : 
+Dans le cas où des colonnes (hors jointure) sont présentes dans `data_a` et `data_b`, ces colonnes seront suffixées par : 
 
-- `.x` pour les colonnes provenant de `a` 
-- `.y` pour les colonnes provenant de `b`
+- `.x` pour les colonnes provenant de `data_a` 
+- `.y` pour les colonnes provenant de `data_b`
 
 Il est possible de modifier ces suffixes en passant le paramètre `suffix = c("_a", "_b")` au moment de la jointure.
 
 ```{r eval=FALSE, include=TRUE}
-left_join(a, b, by = c("c" = "d"), suffix = c("_a", "_b"))
+left_join(data_a, data_b, by = c("colonne_c" = "colonne_d"), suffix = c("_a", "_b"))
 ```
 
 ## Animations de Garrick Abenduie
